Mundando propriedade background-repeat

--- a/exercicios/ex022 - Tratamento de imagens/fundo006.html
+++ b/exercicios/ex022 - Tratamento de imagens/fundo006.html
@@ -13,10 +13,10 @@
             background-image: url(imagens/wallpaper002.jpg);
             height: 100vh;
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             /* cover -> Cobre toda a tela sem distorcer */
             /* contain -> Prenche na horizontal ou na vertical, sem distorcer a imagem */
-            background-size: cover; 
+            background-size: cover;
         }
 
         main {
@@ -33,6 +33,34 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugit vel ducimus laborum fuga dolor
+            aperiam excepturi sit, magnam sequi. Tempore sed fugit saepe veritatis voluptatibus modi illo nam deleniti.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ea perspiciatis ab, tempora pariatur ad
+            consectetur sed molestiae. Veniam rem eveniet ipsum praesentium esse ipsa explicabo fugiat ea magni tempora?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ipsam obcaecati facere, unde ad quo
+            officia, quisquam praesentium nemo nostrum enim architecto. Expedita perspiciatis alias hic placeat adipisci
+            ipsa eaque?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugit vel ducimus laborum fuga dolor
+            aperiam excepturi sit, magnam sequi. Tempore sed fugit saepe veritatis voluptatibus modi illo nam deleniti.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ea perspiciatis ab, tempora pariatur ad
+            consectetur sed molestiae. Veniam rem eveniet ipsum praesentium esse ipsa explicabo fugiat ea magni tempora?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ipsam obcaecati facere, unde ad quo
+            officia, quisquam praesentium nemo nostrum enim architecto. Expedita perspiciatis alias hic placeat adipisci
+            ipsa eaque?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugit vel ducimus laborum fuga dolor
+            aperiam excepturi sit, magnam sequi. Tempore sed fugit saepe veritatis voluptatibus modi illo nam deleniti.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ea perspiciatis ab, tempora pariatur ad
+            consectetur sed molestiae. Veniam rem eveniet ipsum praesentium esse ipsa explicabo fugiat ea magni tempora?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ipsam obcaecati facere, unde ad quo
+            officia, quisquam praesentium nemo nostrum enim architecto. Expedita perspiciatis alias hic placeat adipisci
+            ipsa eaque?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugit vel ducimus laborum fuga dolor
+            aperiam excepturi sit, magnam sequi. Tempore sed fugit saepe veritatis voluptatibus modi illo nam deleniti.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ea perspiciatis ab, tempora pariatur ad
+            consectetur sed molestiae. Veniam rem eveniet ipsum praesentium esse ipsa explicabo fugiat ea magni tempora?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ipsam obcaecati facere, unde ad quo
+            officia, quisquam praesentium nemo nostrum enim architecto. Expedita perspiciatis alias hic placeat adipisci
+            ipsa eaque?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis fugit vel ducimus laborum fuga dolor
             aperiam excepturi sit, magnam sequi. Tempore sed fugit saepe veritatis voluptatibus modi illo nam deleniti.
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ea perspiciatis ab, tempora pariatur ad
