--- a/desafios/desafio012/index.html
+++ b/desafios/desafio012/index.html
@@ -16,7 +16,7 @@
                 Duarte</a></p>
     </header>
 
-    <section>
+    <section class="normal">
         <p>Estou ficando cansado <br>
             Da tal tecnologia <br>
             Só se fala por e-mail <br>
@@ -26,7 +26,7 @@
             Vou dizer tudo em poesia.</p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>Não é mais como era antes <br>
             É tudo abreviado <br>
             "Você" só tem duas letras <br>
@@ -36,7 +36,7 @@
             E um coração desenhado.</p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>Arroba agora não pesa <br>
             É parte de um endereço <br>
             Ponto final nem se usa <br>
@@ -54,7 +54,7 @@
             Decifre esse rabisco.</p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>Tenho saudade das cartas <br> 
             Escritas com a própria mão <br>
             Mandava no mês de Junho <br>
@@ -64,7 +64,7 @@
             Nas linhas do coração.</p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
             Mas quando vou prosear <br>
