--- a/exercicios/ex023 - Trabalhando com tabelas/tabela01.html
+++ b/exercicios/ex023 - Trabalhando com tabelas/tabela01.html
@@ -11,7 +11,8 @@
         }
 
         table {
-            width: 100%;
+            width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
@@ -22,6 +23,12 @@
         td {
             padding: 8px;
             border: 1px solid black;
+            text-align: center; /* Alinhamento horizontal */
+            vertical-align: middle; /* Alinhamento vertical */
+        }
+
+        td.numero {
+            text-align: right;
         }
 
         td.dado {
@@ -50,13 +57,13 @@
         <tr>
             <td>A2
             <td class="dado">B2
-            <td>C2
+            <td class="numero">C2
                 <!-- Apartir do HTML5 o fechamento das tags tr e td é opcional -->
         
         <tr>
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
         
         <tr>
