Exercício 002 de Media Queries

--- a/exercicios/ex026 - Media Queries/mq001/index.html
+++ b/exercicios/ex026 - Media Queries/mq001/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
 
+    <!-- MediaQuery -> é a junção das Media Features com as Media Types -->
     <!-- cria um link específico para um css voltado somente pra tela -->
     <link rel="stylesheet" href="estilos/tela.css" media="screen">
 
