Exercício 26 005 media query

--- a/exercicios/ex026 - Media Queries/mq005/index.html
+++ b/exercicios/ex026 - Media Queries/mq005/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
+
 <body>
     <header>
         <h1>Meu Site</h1>
 
-        <menu>
+        <span id="burguer" class="material-symbols-rounded" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">Opção 1</a></li>
                 <li><a href="#">Opção 2</a></li>
@@ -26,12 +31,38 @@
         <article>
             <h2>Testando Media Queries</h2>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ad et expedita officiis ipsa autem qui sunt totam ea, sed sapiente laborum cum, quasi minima non repellat sit odit vel! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repudiandae inventore libero mollitia ducimus optio culpa atque rem corrupti, saepe, similique blanditiis nisi amet nesciunt numquam. Distinctio reprehenderit fuga ab reiciendis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore ad et expedita officiis ipsa autem qui
+                sunt totam ea, sed sapiente laborum cum, quasi minima non repellat sit odit vel! Lorem, ipsum dolor sit
+                amet consectetur adipisicing elit. Repudiandae inventore libero mollitia ducimus optio culpa atque rem
+                corrupti, saepe, similique blanditiis nisi amet nesciunt numquam. Distinctio reprehenderit fuga ab
+                reiciendis.</p>
 
-            <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi unde aperiam voluptate temporibus repudiandae, ipsam nesciunt harum illo eius iure voluptatibus nemo odio magnam quibusdam doloremque pariatur vitae cum eum.</span><span>Quasi, quia cum exercitationem eligendi incidunt reprehenderit itaque repudiandae voluptas quibusdam? Laudantium sit beatae rerum. Officiis reiciendis doloribus incidunt vel perspiciatis vero eum natus a dolore qui asperiores, provident ratione.</span></p>
+            <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi unde aperiam voluptate
+                    temporibus repudiandae, ipsam nesciunt harum illo eius iure voluptatibus nemo odio magnam quibusdam
+                    doloremque pariatur vitae cum eum.</span><span>Quasi, quia cum exercitationem eligendi incidunt
+                    reprehenderit itaque repudiandae voluptas quibusdam? Laudantium sit beatae rerum. Officiis
+                    reiciendis doloribus incidunt vel perspiciatis vero eum natus a dolore qui asperiores, provident
+                    ratione.</span></p>
 
-            <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit, amet voluptates, totam facilis nostrum fugit minus debitis velit eaque sed officia inventore beatae dignissimos, explicabo autem fuga dolorum recusandae!</span><span>Expedita vitae quo quos ab esse, autem perferendis laboriosam maiores ullam eaque amet natus, molestias sunt consectetur, soluta rerum. Recusandae aut iure deleniti porro suscipit voluptates quam, nam consequatur expedita.</span></p>
+            <p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur suscipit, amet voluptates,
+                    totam facilis nostrum fugit minus debitis velit eaque sed officia inventore beatae dignissimos,
+                    explicabo autem fuga dolorum recusandae!</span><span>Expedita vitae quo quos ab esse, autem
+                    perferendis laboriosam maiores ullam eaque amet natus, molestias sunt consectetur, soluta rerum.
+                    Recusandae aut iure deleniti porro suscipit voluptates quam, nam consequatur expedita.</span></p>
         </article>
     </main>
+
+    <script>
+        function clickMenu(ev) {
+            const menu = document.querySelector('menu#itens');
+
+            if (menu.style.display == 'block') {
+                menu.style.display = 'none';
+            } else {
+                menu.style.display = 'block';
+            }
+        }
+    </script>
 </body>
+
 </html>
